src/snapshots/treetop_core__models__tests__test_user_serialization__user_with_groups_and_namespace.snap
---
source: src/models.rs
expression: serialized
---
{
  "groups": [
    {
      "id": "group1",
      "namespace": [
        "namespace1"
      ]
    },
    {
      "id": "group2",
      "namespace": [
        "namespace1"
      ]
    }
  ],
  "id": "test_user",
  "namespace": [
    "namespace1"
  ]
}
