src/snapshots/treetop_core__models__tests__test_user_serialization__user_with_groups_and_namespaces-2.snap
---
source: src/models.rs
expression: user.cedar_id()
---
namespace1::namespace2::User::"test_user"
