src/snapshots/treetop_core__models__tests__test_user_serialization__user_with_groups_and_namespaces.snap
---
source: src/models.rs
expression: serialized
---
{
  "groups": [
    {
      "id": "group1",
      "namespace": [
        "namespace1",
        "namespace2"
      ]
    },
    {
      "id": "group2",
      "namespace": [
        "namespace1",
        "namespace2"
      ]
    }
  ],
  "id": "test_user",
  "namespace": [
    "namespace1",
    "namespace2"
  ]
}
