src/snapshots/treetop_core__models__tests__test_user_serialization__user_without_groups_and_namespace.snap
---
source: src/models.rs
expression: serialized
---
{
  "groups": [],
  "id": "test_user",
  "namespace": []
}
